--- a/views/users/orderPlace.ejs
+++ b/views/users/orderPlace.ejs
@@ -1,53 +1,53 @@
 <%- include('../layouts/user/header.ejs') %>
 
-<!-- BREADCRUMB -->
-<div id="breadcrumb" class="section">
-  <!-- container -->
-  <div class="container">
-      <!-- row -->
+  <!-- BREADCRUMB -->
+  <div id="breadcrumb" class="section">
+    <div class="container">
       <div class="row">
-          <div class="col-md-12">
-              <h3 class="breadcrumb-header">Order Placed</h3>
-              <ul class="breadcrumb-tree">
-                  <li><a href="/home">Home</a></li>
-                  <li class="active">Order Placed</li>
-              </ul>
-          </div>
-      </div>
-      <!-- /row -->
-  </div>
-  <!-- /container -->
-</div>
-<!-- /BREADCRUMB -->
-
-<section class="p-4">
-  <div class="container" style="margin-top: 100px; margin-bottom: 100px;">
-    <div class="row mt-5 mb-5">
-      <div class="col-md-12 text-center pt-5">
-        <span class="d-flex justify-content-center">
-          <dotlottie-player
-            src="https://lottie.host/59ba5ff8-4a81-4cc9-b2dd-3d8a10a11617/jaGRynaRuK.json"
-            background="transparent"
-            speed="1"
-            style="width: 300px; height: 300px;"
-            loop
-            autoplay
-          ></dotlottie-player>
-        </span>
-        <h3 class="text-black">Thank you!</h3>
-        <% if(user){%>
-        <h5 class="text-success" style="text-transform: uppercase;">
-          
-          <%=user.name%>
-        </h5>
-        <% } %>
-        <p class="lead mb-5">You order was successfuly completed.</p>
-        <a href="/orders"
-          ><button class="btn primary-btn">Check Your Orders</button>
-        </a>
+        <div class="col-md-12">
+          <h3 class="breadcrumb-header">Order Placed</h3>
+          <ul class="breadcrumb-tree">
+            <li><a href="/">Home</a></li>
+            <li class="active">Order Placed</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</section>
+  <!-- /BREADCRUMB -->
+  <div class="row d-flex justify-content-center align-items-center d-flex otp-box">
+    <div class="col-12  col-md- col-lg-4 ">
+      <div class="card bg-white mb-5 mt-5 border-0 my-5">
+        <div data-aos="fade-up" data-aos-anchor-placement="center-bottom"
+          class="  p-5 d-flex flex-column justify-content-center  text-center "
+          style="border-radius: 15px; border: 0.01px solid #d8d8d8; background: #ffffff;">
 
-<%- include('../layouts/user/footer.ejs') %>
+          <div class=" d-flex justify-content-center" id="lottie-container">
+
+            <dotlottie-player src="https://lottie.host/c05d71fc-ebbe-4108-bb2b-6c66ff7ca54a/VOT7oi7C5a.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
+
+          </div>
+          <div class="d-flex flex-column pb-5">
+            <h3 class="text-black">Thank you!</h3>
+        <% if(user){%>
+        <h5 class="text-success" style="text-transform: uppercase;">
+          
+          <%=user.firstName%>
+        </h5>
+        <% } %>
+            <p class="text-center">Thank you for your purchase! Now we're preparing <br> for the shipment</p>
+            <a href="/orders" class="btn btn-outline-dark mt-3 col-7 d-flex mx-auto"
+              onmouseover="this.style.color='#fff'" onmouseleave="this.style.color='#000'">View Orders</a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Include Lottie Library -->
+  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+
+
+ 
+
+  <%- include('../layouts/user/footer.ejs') %>
