--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -141,10 +141,13 @@
                                                     <span>Out of Stock</span>
                                                 </button>
                                                 <% } else { %>
-                                                    <button 
-                                                        class="btn-product btn-cart">
-                                                        <span>Add to Cart</span>
+                                                    <button class="btn-product btn-cart">
+                                                        <a   onclick="addToCart('<%= product._id %>')" id="addToCartBtn_<%= product._id %>">
+                                                            <span>add to cart</span>
+                                                        </a>
                                                     </button>
+
+                                                    
                                                     <% } %>
                                                         <div class="details-action-wrapper">
                                                             <a href="#" class="btn-product btn-wishlist"
@@ -234,3 +237,57 @@
     <%- include('../layouts/user/footer.ejs') -%>
 
         
+    
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="/path/to/script.js"></script>
+    <!-- Include SweetAlert library -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+
+    <script>
+        function addToCart(id) {
+            // Check if the button has the 'disabled' class
+            if ($(`#addToCartBtn_${id}`).hasClass('disabled')) {
+                // If it has, the button is disabled, so you can display a message or take other actions
+                console.log('Product already in the cart');
+                return;
+            }
+    
+            // Add the 'disabled' class to the button to disable it
+            $(`#addToCartBtn_${id}`).addClass('disabled');
+    
+            $.ajax({
+                url: "/addTocart",
+                method: "post",
+                data: {
+                    id: id
+                },
+            }).done((data) => {
+                if (data.success) {
+                    // Product added successfully
+                    Swal.fire({
+                        position: 'center',
+                        icon: 'success',
+                        title: 'Item has been added to Cart',
+                        showConfirmButton: false,
+                        timer: 1000
+                    });
+                } else {
+                    // Failed to add the product
+                    Swal.fire({
+                        position: 'center',
+                        icon: 'error',
+                        title: 'Failed to add the product',
+                        showConfirmButton: false,
+                        timer: 1500
+                    });
+    
+                    // Remove the 'disabled' class to re-enable the button for future attempts
+                    $(`#addToCartBtn_${id}`).removeClass('disabled');
+                }
+            });
+        }
+    </script>
+    
+
+ 
