last orderDetail page

--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -41,7 +41,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <% if(orderData==0){%>
+                  <% if(orderData){%>
                   <% let count = 1; %>
                   <% orderData.forEach((data)=>{%>
                   <tr>
