--- a/views/layouts/admin/sidebar.ejs
+++ b/views/layouts/admin/sidebar.ejs
@@ -50,11 +50,11 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white " href="../pages/notifications.html">
+        <a class="nav-link text-white " href="/admin/view-orders">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">notifications</i>
           </div>
-          <span class="nav-link-text ms-1">Notifications</span>
+          <span class="nav-link-text ms-1">View Orders</span>
         </a>
       </li>
       <li class="nav-item mt-3">
@@ -69,14 +69,14 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white " href="../pages/sign-in.html">
+        <a class="nav-link text-white " href="/admin/logout">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">login</i>
+            <i class="material-icons opacity-10">logout</i>
           </div>
-          <span class="nav-link-text ms-1">Sign In</span>
+          <span class="nav-link-text ms-1">logout</span>
         </a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link text-white " href="../pages/sign-up.html">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">assignment</i>
@@ -90,5 +90,5 @@
     <div class="mx-3">
       <a class="btn bg-gradient-primary mt-4 w-100" href="https://www.creative-tim.com/product/material-dashboard-pro?ref=sidebarfree" type="button">Upgrade to pro</a>
     </div>
-  </div>
+  </div> -->
 </aside>
